# assessment-crivera

./: README.md  database_creation.py  dv01_calc.py  main.py  pharo_assessment.db  pyproject.toml  requirements.txt  tox.ini
refinitiv_data/: cusip_info.csv  tick_history.csv  tick_history.xlsx
webpage/: calculations.py  callbacks.py  frontend.py
