[tool.poetry]
name = "assessment-crivera"
version = "0.1.0"
description = ""
authors = ["Christian Rivera <crivera@post.harvard.edu>"]
readme = "README.md"
packages = [{include = "assessment_crivera"}]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"
yfinance = "^0.2.33"
scipy = "^1.11.4"
pandas = "^2.1.4"
flake8 = "^6.1.0"
dash = "^2.14.2"
sqlalchemy = "^2.0.23"
openpyxl = "^3.1.2"
numpy-financial = "^1.0.0"
ipython = "^8.18.1"
numpy = "^1.26.2"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
